--- a/css/style.scss
+++ b/css/style.scss
@@ -14,12 +14,14 @@ $F-light: 200;
 $F-Regular: 400;
 $F-bold: 600;
 
+* {
+    box-sizing: border-box;
+}
 
 body {
     position: relative;
     font-family: "Microsoft YaHei", Arial, Helvetica, sans-serif;
     font-size: 16px;
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
     min-width: 1366px;
@@ -27,11 +29,6 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center top;
-    overflow-x: hidden;
-}
-
-* {
-    box-sizing: border-box;
 }
 
 h1 {
@@ -72,6 +69,11 @@ section {
     padding-bottom: 50px;
 }
 
+body::-webkit-scrollbar , .web::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
+
 
 .header {
     position: fixed;
@@ -79,6 +81,7 @@ section {
     justify-content: center;
     padding: 0 120px;
     width: 100%;
+    min-width: 1366px;
     height: 80px;
     background-color: $white;
     box-shadow: 0px 3px 6px #0000001A;
@@ -115,12 +118,11 @@ section {
     }
 
     .menu {
-        flex: 1;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin-right: 4rem;
-        max-width: 700px;
+        width: 600px;
         height: 100%;
         color: $gray-1;
 
@@ -340,7 +342,7 @@ section {
     position: relative;
     display: flex;
     justify-content: center;
-    padding-top: 24px;
+    padding-top: 80px;
 
     &-controller {
         position: absolute;
