--- a/css/style.scss
+++ b/css/style.scss
@@ -69,12 +69,15 @@ section {
     padding-bottom: 50px;
 }
 
-body::-webkit-scrollbar , .web::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-}
+// body::-webkit-scrollbar , .web::-webkit-scrollbar {
+//     width: 0;
+//     height: 0;
+// }
 
 
+
+// header
+// ------------------------------------------
 .header {
     position: fixed;
     display: flex;
@@ -97,247 +100,257 @@ body::-webkit-scrollbar , .web::-webkit-scrollbar {
         max-width: 1366px;
     }
 
-    .wrapper {
+    // .header__item
+    &__item {
         display: flex;
         align-items: center;
 
-        // .wrapper:first-of-type
+        // 包含 logo 與主選單
         &:first-of-type {
             flex: 1;
             height: 100%;
         }
-    }
 
-    .logo {
-        max-width: 150px;
-        margin-right: 55px;
-
-        img {
-            width: 100%;
+        @at-root .logo {
+            flex: 0 0 auto;
+            max-width: 150px;
+            margin-right: 55px;
+    
+            img {
+                width: 100%;
+            }
         }
-    }
 
-    .menu {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin-right: 4rem;
-        width: 600px;
-        height: 100%;
-        color: $gray-1;
 
-        // .menu-item 
-        &-item {
+        @at-root .menu {
+            flex: 0 0 auto;
             display: flex;
-            align-items: center;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-right: 4rem;
+            width: 600px;
             height: 100%;
-
-            &.is--staying {
-                a {
+            color: $gray-1;
+    
+            // .menu-item 
+            &-item {
+                display: flex;
+                align-items: center;
+                height: 100%;
+    
+                &.is--staying {
+                    a {
+                        color: $primary;
+    
+                        &::after {
+                            width: 100%;
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+    
+            // .menu-item a
+            &-item a {
+                position: relative;
+                cursor: pointer;
+                height: 100%;
+                line-height: 80px;
+                transition: .3s;
+                color: $gray-1;
+    
+                // .menu-item a:hover
+                &:hover {
                     color: $primary;
-
+    
+                    // .menu-item a:hover::after
                     &::after {
                         width: 100%;
                         opacity: 1;
                     }
                 }
-            }
-        }
-
-        // .menu-item a
-        &-item a {
-            position: relative;
-            cursor: pointer;
-            height: 100%;
-            line-height: 80px;
-            transition: .3s;
-            color: $gray-1;
-
-            // .menu-item a:hover
-            &:hover {
-                color: $primary;
-
-                // .menu-item a:hover::after
-                &::after {
-                    width: 100%;
-                    opacity: 1;
-                }
-            }
-
-            // .menu-item a:active
-            &:active {
-                color: inherit;
-            }
-
-            // .menu-item a::after
-            &::after {
-                content: '';
-                position: absolute;
-                bottom: 0;
-                display: block;
-                width: 0;
-                height: 4px;
-                background: $primary;
-                border-radius: 4px;
-                transition: .3s;
-                opacity: 0;
-            }
-        }
-    }
-
-    .account {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-right: 36px;
-        width: 140px;
-
-        // ,account-info
-        &-info {
-            display: flex;
-            align-items: center;
-            margin-right: 8px;
-            cursor: pointer;
-
-            img {
-                width: 36px;
-            }
-        }
-
-        @at-root .sign-up, .sign-in {
-            padding: 0 3px;
-            color: $gray-1;
-            font-weight: $F-Regular;
-            transition: .3s;
-
-            &:hover {
-                color: $highlight;
-            }
-        }
-
-        span {
-            margin: 0 4px
-        }
-    }
-
-    @at-root .language-select {
-        position: relative;
-        display: flex;
-        align-items: center;
-        border: 1px solid $gray-1;
-        border-radius: 6px;
-        height: 2rem;
-        font-size: 0.875rem;
-        cursor: pointer;
-        background-color: $white;
-
-        &.is--open {
-
-
-            .language-select__container {
-                visibility: visible;
-                opacity: 1;
-                transform: translateY(0px);
-            }
-
-            .i-triangle {
-                transform: rotate(180deg);
-            }
-
-
-
-        }
-
-
-
-        .i-triangle {
-            width: 1rem;
-            height: 1rem;
-            margin-left: .75rem;
-            transition: ease .2s;
-
-            img {
-                width: inherit;
-                height: inherit;
-            }
-        }
-
-        // .language-select__container 
-        &__container {
-            opacity: 0;
-            visibility: hidden;
-            position: absolute;
-            top: 100%;
-            left: -1px;
-            min-width: 100%;
-            border: inherit;
-            border-radius: inherit;
-            background-color: inherit;
-            transform: translateY(-10%);
-            transition: ease .2s;
-        }
-
-        // .language-select__list 
-        &__list {
-            display: flex;
-            flex-direction: column;
-            max-height: 50vh;
-        }
-
-        // .language-select__item 
-        &__item {
-            z-index: 1;
-            display: flex;
-            align-items: stretch;
-            min-height: 34px;
-
-            // .language-select__item:hover
-            &:hover {
-                color: $primary;
-
-                .lang-btn {
+    
+                // .menu-item a:active
+                &:active {
                     color: inherit;
                 }
-
-                .lang-text i { 
-                    margin-right: 6px;
-                    width: 4px;
+    
+                // .menu-item a::after
+                &::after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    display: block;
+                    width: 0;
+                    height: 4px;
+                    background: $primary;
+                    border-radius: 4px;
+                    transition: .3s;
+                    opacity: 0;
                 }
             }
-
-            .lang-text {
+        }
+        
+        @at-root .account {
+            flex: 0 0 auto;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-right: 36px;
+            width: 140px;
+    
+            // ,account-info
+            &-info {
                 display: flex;
                 align-items: center;
+                margin-right: 8px;
+                cursor: pointer;
     
-                i {
-                    display: inline-block;
-                    margin-right: .25rem;
-                    width: 0;
-                    height: 1.25rem;
-                    background-color: $primary;
-                    border-radius: 4px;
-                    transition: ease .2s;
+                img {
+                    width: 36px;
                 }
             }
-        }
-
-        .lang-btn {
-            display: flex;
-            align-items: stretch;
-            width: 100%;
-            padding: .125rem .75rem;
-            color: $gray-1;
-
-            // .lang-btn:active
-            &:active {
+    
+            @at-root .sign-up, .sign-in {
+                padding: 0 3px;
                 color: $gray-1;
+                font-weight: $F-Regular;
+                transition: .3s;
+    
+                &:hover {
+                    color: $highlight;
+                }
+            }
+    
+            span {
+                margin: 0 4px
             }
         }
-
+    
+        @at-root .language-select {
+            flex: 0 0 auto;
+            position: relative;
+            display: flex;
+            align-items: center;
+            border: 1px solid $gray-1;
+            border-radius: 6px;
+            height: 2rem;
+            font-size: 0.875rem;
+            cursor: pointer;
+            background-color: $white;
+    
+            &.is-open {
+    
+    
+                .language-select__container {
+                    visibility: visible;
+                    opacity: 1;
+                    transform: translateY(0px);
+                }
+    
+                .i-triangle {
+                    transform: rotate(180deg);
+                }
+    
+    
+    
+            }
+    
+    
+    
+            .i-triangle {
+                width: 1rem;
+                height: 1rem;
+                margin-left: .75rem;
+                transition: ease .2s;
+    
+                img {
+                    width: inherit;
+                    height: inherit;
+                }
+            }
+    
+            // .language-select__container 
+            &__container {
+                opacity: 0;
+                visibility: hidden;
+                position: absolute;
+                top: 100%;
+                left: -1px;
+                min-width: 100%;
+                border: inherit;
+                border-radius: inherit;
+                background-color: inherit;
+                transform: translateY(-10%);
+                transition: ease .2s;
+            }
+    
+            // .language-select__list 
+            &__list {
+                display: flex;
+                flex-direction: column;
+                max-height: 50vh;
+            }
+    
+            // .language-select__item 
+            &__item {
+                z-index: 1;
+                display: flex;
+                align-items: stretch;
+                min-height: 34px;
+    
+                // .language-select__item:hover
+                &:hover {
+                    color: $primary;
+    
+                    .lang-btn {
+                        color: inherit;
+                    }
+    
+                    .lang-text i { 
+                        margin-right: 6px;
+                        width: 4px;
+                    }
+                }
+    
+                .lang-text {
+                    display: flex;
+                    align-items: center;
         
+                    i {
+                        display: inline-block;
+                        margin-right: .25rem;
+                        width: 0;
+                        height: 1.25rem;
+                        background-color: $primary;
+                        border-radius: 4px;
+                        transition: ease .2s;
+                    }
+                }
+            }
+    
+            .lang-btn {
+                display: flex;
+                align-items: stretch;
+                width: 100%;
+                padding: .125rem .75rem;
+                color: $gray-1;
+    
+                // .lang-btn:active
+                &:active {
+                    color: $gray-1;
+                }
+            }
+    
+             
+        }
     }
+
 }
 
+
+// hero
+// ------------------------------------------
 .hero {
     position: relative;
     display: flex;
@@ -372,6 +385,9 @@ body::-webkit-scrollbar , .web::-webkit-scrollbar {
     }
 }
 
+
+// intro
+// ------------------------------------------
 .intro {
     display: flex;
     flex-direction: column;
@@ -476,6 +492,9 @@ body::-webkit-scrollbar , .web::-webkit-scrollbar {
     }
 }
 
+
+// promotion
+// ------------------------------------------
 .promotion {
     display: flex;
     flex-direction: column;
@@ -545,6 +564,9 @@ body::-webkit-scrollbar , .web::-webkit-scrollbar {
     }
 }
 
+
+// register
+// ------------------------------------------
 .register {
     display: flex;
     flex-direction: column;
@@ -640,6 +662,9 @@ body::-webkit-scrollbar , .web::-webkit-scrollbar {
     }
 }
 
+
+// footer
+// ------------------------------------------
 .footer {
     display: flex;
     justify-content: center;
